--- a/index.html
+++ b/index.html
@@ -165,7 +165,7 @@ May Allah bless u and may ur wishes come truee. I pray that u achieve all of ur 
 you mean everything to me.
 
 sincerely,
-𝜗𝜚 ur future >⩊<`;
+𝜗𝜚 ur future;
 
     function goToPage(pageNum) {
       const pages = document.querySelectorAll('.page');
