--- a/index.html
+++ b/index.html
@@ -156,13 +156,12 @@
 
   <script src="https://cdn.jsdelivr.net/npm/canvas-confetti@1.6.0/dist/confetti.browser.min.js"></script>
   <script>
-    const fullLetter = `happy birthdayy nufayl! 💙
+    const fullLetter = `happy birthdayy to my favourite person in the world! 💙
 
-May Allah bless u and may ur wishes come truee. I pray that u achieve all of ur dreams and ur success fi dunya wal akhirah.
-
-.
-
-you mean everything to me.
+may Allah bless u and may ur wishes come true. i hope and pray that u achieve all of ur dreams and succeed fi dunya wal akhirah. 
+im so proud of how u have come so far, whether its big or small, im the proudest of all ♡ knowing u have become the greatest miracle in my life and im so grateful for that. 
+thank you for being u, thank you for surviving, thank you for all the efforts, moments, comforts, and words that u gave to me, just know that im always here and will wait for u. 
+happy birthday againn nufayl! enjoy ur dayy and may ur birthday be as amazing as u are!
 
 sincerely,
 𝜗𝜚 ur future :) `;
