--- a/index.html
+++ b/index.html
@@ -159,8 +159,11 @@
     const fullLetter = ` happy birthdayy to my favourite person in the world! 💙
 
 may Allah bless u and may ur wishes come true. i hope and pray that u achieve all of ur dreams and succeed fi dunya wal akhirah. 
-im so proud of how u have come so far, whether its big or small, im the proudest of all ♡ knowing u have become the greatest miracle in my life and im so grateful for that. 
-thank you for being u, thank you for surviving, thank you for all the efforts, moments, comforts, and words that u gave to me, just know that im always here and will wait for u. 
+
+im so proud of how u have come so far, whether its big or small, im the proudest of all ♡ 
+
+knowing u have become the greatest miracle in my life and im so grateful for that. thank you for being u, thank you for surviving, thank you for all the efforts, moments, comforts, and words that u gave to me, just know that im always here and will wait for u. 
+
 happy birthday againn nufayl! enjoy ur dayy and may ur birthday be as amazing as u are!
 
 sincerely,
