--- a/index.html
+++ b/index.html
@@ -158,11 +158,13 @@
   <script>
     const fullLetter = `  happy birthdayy to my favourite person in the world! 💙
 
-may Allah bless u and may ur wishes come true. i hope and pray that u achieve all of ur dreams and succeed fi dunya wal akhirah. im so proud of how far u have come, whether its big or small, im the proudest of all ♡ 
+may Allah bless u and may all ur wishes come truee. i hope and pray that u achieve all ur dreams and succeed fi dunya wal akhirah. im so proud of how far u have come, whether its big or small, im the proudest of all ♡ 
 
-knowing u have become the greatest miracle in my life and im so grateful for that. thank you for being u, thank you for surviving, thank you for all the efforts, moments, comforts, and words that u gave to me, just know that im always here and will wait for u. 
+knowing u have become the greatest miracle in my life and im so grateful for that. thank you for being u, thank you for holding on, thank you for always being there for me, thank you for all the efforts, moments, comforts, and words u have given me. just know that im always here and will wait for u.
 
-happy birthday againn nufayl! enjoy ur dayy and may ur birthday be as amazing as u are!
+good luck with the rest of ur internship! wishing u all the best for ur last two semesters until graduation, may everything go smoothly and may u graduate with flying colors, insyaAllah. i believe in you!   
+
+happy birthday againn nufayl! take good care of yourself and please stay safe wherever u are. enjoy ur dayy and may ur birthday be as amazing as u are!
 
 sincerely,
 𝜗𝜚 ur future :) `;
