--- a/index.html
+++ b/index.html
@@ -156,18 +156,18 @@
 
   <script src="https://cdn.jsdelivr.net/npm/canvas-confetti@1.6.0/dist/confetti.browser.min.js"></script>
   <script>
-    const fullLetter = `    happy birthdayy to my favourite person! 💙
+    const fullLetter = `     happy birthdayy to my favourite person! 💙
 
-may Allah bless u and may all ur wishes come truee. i hope and pray that u achieve all ur dreams and succeed fi dunya wal akhirah. im so proud of how far u have come, whether its big or small, im the proudest of all ♡ 
+may Allah bless you and may all your wishes come truee. i hope and pray that you achieve all your dreams and succeed fi dunya wal akhirah. im so proud of how far you have come, whether its big or small, im the proudest of all ♡ 
 
-knowing u have become the greatest miracle in my life and im so grateful for that. thank you for being u, thank you for holding on, thank you for always being there for me, thank you for all the efforts, moments, comforts, and words u have given me. just know that im always here and will wait for u.
+knowing you have become the greatest miracle in my life and im so grateful for that. thank you for being you, thank you for holding on, thank you for always being there for me, thank you for all the efforts, moments, comforts, and words you have given me. just know that im always here and will wait for youu.
 
-good luck with the rest of ur internship! wishing u all the best for ur last two semesters until graduation, may everything go smoothly and may u graduate with flying colors, insyaAllah. i believe in you!   
+good luck with the rest of your internship! wishing you all the best for your last two semesters until graduation, may everything go smoothly and may you graduate with flying colors, insyaAllah. i believe in you!   
 
-happy birthday againn nufayl! take good care of yourself and please stay safe wherever u are. enjoy ur dayy and may ur birthday be as amazing as u are!
+happy birthday againn nufayl! take good care of yourself and please stay safe wherever you are. enjoy ur dayy and may your birthday be as amazing as you are!
 
 sincerely,
-𝜗𝜚 ur future :) `;
+𝜗𝜚 your future :) `;
 
     function goToPage(pageNum) {
       const pages = document.querySelectorAll('.page');
