--- a/index.html
+++ b/index.html
@@ -148,7 +148,7 @@
   </div>
 
 <div class="page" id="page3" style="font-family: 'Dancing Script', cursive;">
-    <h2>To Aleef Nufayl <𝟑 .ᐟ </h2>
+    <h2>To Aleef Nufayl <𝟑  </h2>
     <div class="letter" id="letterText"></div>
 </div>
 
@@ -156,15 +156,15 @@
 
   <script src="https://cdn.jsdelivr.net/npm/canvas-confetti@1.6.0/dist/confetti.browser.min.js"></script>
   <script>
-    const fullLetter = `     happy birthdayy to my favourite person! 💙
+    const fullLetter = `      Happy birthdayy to my favourite person! 💙
 
-may Allah bless you and may all your wishes come truee. i hope and pray that you achieve all your dreams and succeed fi dunya wal akhirah. im so proud of how far you have come, whether its big or small, im the proudest of all ♡ 
+May Allah bless you and may all your wishes come truee. I hope and pray that you achieve all your dreams and succeed fi dunya wal akhirah. Im so proud of how far you have come, whether its big or small, im the proudest of all ♡ 
 
-knowing you have become the greatest miracle in my life and im so grateful for that. thank you for being you, thank you for holding on, thank you for always being there for me, thank you for all the efforts, moments, comforts, and words you have given me. just know that im always here and will wait for youu.
+Knowing you have become the greatest miracle in my life and im so grateful for that. Thank you for being you, thank you for holding on, thank you for always being there for me, thank you for all the efforts, moments, comforts, and words you have given me. Just know that im always here and will wait for youu.
 
-good luck with the rest of your internship! wishing you all the best for your last two semesters until graduation, may everything go smoothly and may you graduate with flying colors, insyaAllah. i believe in you!   
+Good luck with the rest of your internship! Wishing you all the best for your last two semesters until graduation, may everything go smoothly and may you graduate with flying colors, InsyaAllah. I believe in you!   
 
-happy birthday againn nufayl! take good care of yourself and please stay safe wherever you are. enjoy ur dayy and may your birthday be as amazing as you are!
+Happy birthday againn nufayl! Take good care of yourself and please stay safe wherever you are. Enjoy ur dayy and may your birthday be as amazing as you are!
 
 sincerely,
 𝜗𝜚 your future :) `;
