--- a/index.html
+++ b/index.html
@@ -156,7 +156,7 @@
 
   <script src="https://cdn.jsdelivr.net/npm/canvas-confetti@1.6.0/dist/confetti.browser.min.js"></script>
   <script>
-    const fullLetter = `        Happy birthdayy to my favourite person! 💙
+    const fullLetter = `         Happy birthdayy to my favourite person! 💙
 
 May Allah bless you and may all your wishes come truee. I hope and pray that you achieve all your dreams and succeed fi dunya wal akhirah. Im so proud of how far you have come, whether its big or small, im the proudest of all ♡ 
 
@@ -164,7 +164,7 @@ Knowing you have become the greatest miracle in my life and im so grateful for t
 
 Good luck with the rest of your internship! Wishing you all the best for your last two semesters until graduation, may everything go smoothly and may you graduate with flying colors, InsyaAllah aamiin. I believe in you!   
 
-Happy birthday againn nufayl! Take good care of yourself and please stay safe wherever you are. Enjoy ur dayy and may your birthday be as amazing as you are!
+Happy birthday againn nufayl! Take good care of yourself and please stay safe wherever you are. Enjoy your dayy and may your birthday be as amazing as you are!
 
 sincerely,
 𝜗𝜚 your future :) `;
