--- a/index.html
+++ b/index.html
@@ -156,11 +156,11 @@
 
   <script src="https://cdn.jsdelivr.net/npm/canvas-confetti@1.6.0/dist/confetti.browser.min.js"></script>
   <script>
-    const fullLetter = `          Happy birthdayy to my favourite person! 💙
+    const fullLetter = `           Happy birthdayy to my favourite person! 💙
 
 May Allah bless you and may all your wishes come truee. I hope and pray that you achieve all your dreams and succeed fi dunya wal akhirah. Im so proud of how far you have come, whether its big or small, im the proudest of all ♡ 
 
-Knowing you have become the greatest miracle in my life and im so grateful for that. Thank you for being you, thank you for holding on, thank you for always being there for me, thank you for all the efforts, moments, comforts, and words you have given me. Just know that im always here and will wait for youu.
+Knowing you have become the greatest miracle in my life and im so grateful for that. Thank you for being you, thank you for holding on, thank you for showing up and always being there for me, thank you for all the efforts, moments, comforts, and words you have given me. Just know that im always here and will wait for youu.
 
 Good luck with the rest of your internship! Wishing you all the best for your last two semesters until graduation, may everything go smoothly and may you graduate with flying colors, InsyaAllah aamiin. I believe in you!   
 
